# RimeAPI

./: LICENSE  README.md  gradle.properties  jitpack.yml  settings.gradle.kts
core/: build.gradle.kts
core/src/main/java/com/hnidesu/rime/: RimeAPI.kt  RimeCandidate.kt  RimeComposition.kt  RimeContext.kt  RimeMenu.kt  RimeStatus.kt
core/src/main/jniLibs/: .gitignore
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
native/: CMakeLists.txt  install-librime.sh
native/rimeapi/: CMakeLists.txt
native/rimeapi/src/: RimeConverter.cpp  RimeConverter.h  rimeapi.cpp
